<resources>
    <string name="app_name">EA Health</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_text">Register Here!</string>
    <string name="code">Code</string>
    <string name="recover">Recover</string>
    <string name="recover_here">Recover account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="vacinas">Vacinas</string>
    <string name="diabetes">Diabetes</string>
    <string name="pressao">Pressão</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="batimentos">Batimentos</string>
    <string name="adicionar">Adicionar</string>
    <string name="vacina">Vacina</string>
    <string name="input_vacine">Sua vacina</string>
    <string name="input_diabetes">Valor medida</string>
    <string name="logoContentDescription">EA HEALTH icon</string>
    <string name="logout">Sair</string>
    <string name="content_description_add_weight_button">add weight button</string>
    <string name="vaccine_title">Vacinas</string>
    <string name="vaccine_icon_content">Vaccine icon</string>
    <string name="add_vaccine_button_content_desc">add vaccine button</string>
    <string name="weight_title">Peso</string>
    <string name="perfil">Perfil</string>
    <string name="remover">Remover</string>
    <string name="diast_lica">Diastólica</string>
    <string name="sistolica">Sistolica</string>
    <string name="height_title">Altura</string>
    <string name="IMC">IMC</string>
    <string name="buscando_dados_e_calculando">Buscando dados e calculando...</string>
</resources>