<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_offwhite"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/vaccine_title"
        style="@style/title_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaccine_title"
        android:textColor="@color/black_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vaccine_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/vaccine_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/vacine_icon"
        app:layout_constraintBottom_toTopOf="@+id/container_components"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vaccine_title"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/vaccine_icon_content" />
    <View
        android:id="@+id/container_components"
        style="@style/container_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/vaccine_list_view"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/vaccine_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/add_vaccine_button_content_desc"
        android:focusable="true" />

    <ListView
        android:id="@+id/vaccine_list_view"
        android:layout_width="409dp"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@id/vaccine_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>